# ChangeLog for app-xemacs/misc-games
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-xemacs/misc-games/ChangeLog,v 1.28 2011/07/22 11:25:03 xarthisius Exp $

*misc-games-1.23 (05 Sep 2013)

  05 Sep 2013; Mats Lidell <matsl@gentoo.org> +metadata.xml,
  +misc-games-1.23.ebuild:
  app-xemacs/misc-games: Upstream experimental version bump and use EAPI=5

  22 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> misc-games-1.22.ebuild:
  ppc64 stable wrt #369897

  03 Jul 2011; Markos Chandras <hwoarang@gentoo.org> misc-games-1.22.ebuild:
  Stable on amd64 wrt bug #369897

  28 Jun 2011; Brent Baude <ranger@gentoo.org> misc-games-1.22.ebuild:
  Marking misc-games-1.22 ppc stable for bug 369897

  25 Jun 2011; Raúl Porcel <armin76@gentoo.org> misc-games-1.22.ebuild:
  alpha/sparc stable wrt #369897

  12 Jun 2011; Thomas Kahle <tomka@gentoo.org> misc-games-1.22.ebuild:
  x86 stable per bug 369897

*misc-games-1.22 (22 Feb 2009)

  22 Feb 2009; Hans de Graaff <graaff@gentoo.org> +misc-games-1.22.ebuild:
  Version bump with fixes for conx and rot13.

  20 Feb 2009; Christian Faulhammer <fauli@gentoo.org>
  -misc-games-1.18.ebuild:
  clean up

  12 May 2008; Markus Rothe <corsair@gentoo.org> misc-games-1.19.ebuild:
  Stable on ppc64

  05 May 2008; Raúl Porcel <armin76@gentoo.org> misc-games-1.19.ebuild:
  alpha/sparc stable wrt #219332

  02 May 2008; Christian Faulhammer <opfer@gentoo.org>
  misc-games-1.19.ebuild:
  stable x86, bug 219332

  30 Apr 2008; nixnut <nixnut@gentoo.org> misc-games-1.19.ebuild:
  Stable on ppc wrt bug 219332

  26 Apr 2008; Hans de Graaff <graaff@gentoo.org> misc-games-1.19.ebuild:
  Mark stable on amd64 , bug #219332

  19 Mar 2008; Hans de Graaff <graaff@gentoo.org> metadata.xml:
  A herd should not be listed as maintainer

  25 Oct 2007; Hans de Graaff <graaff@gentoo.org> -misc-games-1.16.ebuild:
  Remove old version
