@@ -1,1 +1,2 @@
 DIST misc-games-1.23-pkg.tar.gz 171290 SHA256 8174715f5f938684f288722f9ec95f5a33579be0f6632298829128b18d4d9514 SHA512 ecdc085c8711c27d11b2853cfbe28a1d8850cfb3c8387636c4c07ae1cbaeef230c253b33df539cf4b5cc141cf03f7e11abaa71e6fd10265b4a732da8b17366ed WHIRLPOOL 12ef8bc3362ad090864076952652b19ab6d16c0355a7bfc5860ac6edb50a60b4837f9864e9a5e0c5468ae643f4e222b1a2d346ecc97a36f566b9f52ec7aef279
+DIST misc-games-1.25-pkg.tar.gz 171350 SHA256 f4e9a127cadc371598ba359e0b2b5b1536509b32adb59eb4635f0eddc1a230e5 SHA512 85b5eab1bdb485ab5d61b52fd3873d778a48b689d3554a1c11fad28a61b8d9429af5efdd80c01741530298538bbb51028ebd1896d737abb24f53f92bac000454 WHIRLPOOL 6fcf192dffe97744465bc2a8556cb3b446d85fb2726fd271400fc3089e4a0cd455bc005b8a4c04e1a2f21985101d93795da77085b86c60b9b36df7a442bc40d1
