@@ -1,6 +1,11 @@
 # ChangeLog for app-xemacs/misc-games
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-xemacs/misc-games/ChangeLog,v 1.28 2011/07/22 11:25:03 xarthisius Exp $
+
+*misc-games-1.25 (11 Jul 2014)
+
+  11 Jul 2014; Mats Lidell <matsl@gentoo.org> +misc-games-1.25.ebuild:
+  Pre release version bump
 
 *misc-games-1.23 (05 Sep 2013)
 
